deployment-yaml-files/09-Fargate-App1-Deployment-and-Service.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app1-fargate
  labels:
    app: app1-fargate
  namespace: fp-ns-app1    
spec:
  replicas: 1
  selector:
    matchLabels:
      app: app1-fargate
  template:
    metadata:
      labels:
        app: app1-fargate
    spec:
      containers:
        - name: app1-fargate-container
          image: mirana/app1
          ports:
            - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: app1-fargate-service
  labels:
    app: app1-fargate
  namespace: fp-ns-app1    
  annotations:
#Important Note:  Need to add health check path annotations in service level if we are planning to use multiple targets in a load balancer    
    alb.ingress.kubernetes.io/healthcheck-path: /index.html
spec:
  type: ClusterIP
  selector:
    app: app1-fargate
  ports:
    - port: 80
      targetPort: 80
